import("//azer/build/templates/afx.gni")

afx("effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}

executable("dft_ocean") {
  output_name = "dft_ocean"
  sources = [
    "main.cc",
    "tile.cc",
    "tile.h",
  ]
  deps = ["//azer/sandbox/base",
          ":effect",
         ]
  gen_dir = rebase_path(target_gen_dir)
  defines = ["EFFECT_GEN_DIR=\"$gen_dir/\""]
}