

executable("water1") {
  output_name = "keithlanzt_part1"
  sources = [
    "src/buffer.cc",
    "src/buffer.h",
    "src/complex.cc",
    "src/complex.h",
    "src/fft.cc",
    "src/fft.h",
    "src/glhelper.cc",
    "src/glhelper.h",
    "src/joystick.cc",
    "src/joystick.h",
    #"src/keyboard.cc",
    #"src/keyboard.h",
    "src/misc.cc",
    "src/misc.h",
    #"src/mouse.cc",
    #"src/mouse.h",
    "src/obj.cc",
    "src/obj.h",
    "src/timer.cc",
    "src/timer.h",
    "src/vector.cc",
    "src/vector.h",
    "main.cc",
  ]
  deps = [
    "//azer/third_party/glm",
    "//azer/third_party/glew",
  ]
  include_dirs = ["src"]
}
