

group("keithlantz") {
  deps = [
    ":part1",
  ]
}

executable("part1") {
  output_name = "keithlanzt_part1"
  sources = [
    "src/src/buffer.cc",
    "src/src/buffer.h",
    "src/src/complex.cc",
    "src/src/complex.h",
    "src/src/fft.cc",
    "src/src/fft.h",
    "src/src/glhelper.cc",
    "src/src/glhelper.h",
    "src/src/misc.cc",
    "src/src/misc.h",
    "src/src/obj.cc",
    "src/src/obj.h",
    "src/src/timer.cc",
    "src/src/timer.h",
    "src/src/vector.cc",
    "src/src/vector.h",
    "src/main.cc",

    #"src/src/joystick.cc",
    #"src/src/joystick.h",
    #"src/src/keyboard.cc",
    #"src/src/keyboard.h",
    #"src/src/mouse.cc",
    #"src/src/mouse.h",
  ]
  deps = [
    "//azer/third_party/glm",
    "//azer/third_party/glew",
    "//azer/externlib/SDL:SDL-1.2",
    "//base:base",
  ]
  include_dirs = ["src"]
  configs += ["//azer/build/config:opengl"]
}
