import("//azer/build/templates/afx.gni")

afx("effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}


executable("tile") {
  output_name = "water_tile"
  sources = ["main.cc"]
  deps = ["//azer/sandbox/base",
          ":effect",
         ]
  gen_dir = rebase_path(target_gen_dir)
  defines = ["EFFECT_GEN_DIR=\"$gen_dir/\""]
}