import("//azer/build/templates/afx.gni")

afx("effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}

afx("gseffect") {
  source = "gsnormal.afx"
  filename = "gsnormal"
}

executable("lighted") {
  output_name = "fftocean_lighted"
  sources = [
    "ocean.cc",
    "ocean.h",
    "main.cc",
    "tile.cc",
    "tile.h",
    "fft.cc",
    "fft.h",
  ]

  deps = [
    "//base",
    "//azer/render",
    "//azer/sandbox/base",
    ":effect",
    ":gseffect",
  ]

  gen_dir = rebase_path(target_gen_dir)
  defines = ["EFFECT_GEN_DIR=\"$gen_dir/\""]
}